--- a/PomodoroUI/PomodoroUI/Areas/Registered/Pages/Timer/Partials/_CompletedStudyTasks.cshtml
+++ b/PomodoroUI/PomodoroUI/Areas/Registered/Pages/Timer/Partials/_CompletedStudyTasks.cshtml
@@ -27,9 +27,15 @@ else
                     <div class="d-flex justify-content-between align-items-center mb-0">
                         <div class="d-flex align-items-baseline">
                             <div>
-                                <input hx-page-handler="CompleteTask"
+                                <input checked
+                                       hx-post
+                                       hx-trigger="change"
+                                       hx-page-handler="UncompleteTask"
+                                       hx-route-id="@task.Id"
+                                       hx-swap="outerHTML"
+                                       hx-target="#all-study-tasks"
                                        type="checkbox"
-                                       class="form-check-input me-2 mt-1">
+                                       class="form-check-input me-2 mt-1" />
                             </div>
                             <div class="d-flex flex-column justify-content-between">
                                 <div class="d-flex align-items-center">
