--- a/PomodoroUI/PomodoroUI/Areas/Registered/Pages/Timer/Index.cshtml
+++ b/PomodoroUI/PomodoroUI/Areas/Registered/Pages/Timer/Index.cshtml
@@ -44,38 +44,25 @@
         </div>
     </div>
 
-
-    <div class="d-flex mb-4">
-        <i class="bi bi-square-fill text-primary me-2"></i>
-        <i class="bi bi-square-fill text-primary me-2"></i>
-        <i class="bi bi-square-fill me-2"></i>
-        <i class="bi bi-square me-2"></i>
-        <i class="bi bi-square me-2"></i>
-    </div>
-
     <div class="mb-5">
         <div class="d-flex">
             <div class="me-2">
-                <input type="radio" class="btn-check" name="timer-options" value="60" id="option5" autocomplete="off" checked>
-                <label class="btn" for="option5">60min</label>
+                <input type="radio" class="btn-check" name="timer-options" value="25" id="pomodoro" autocomplete="off" checked>
+                <label class="btn btn-lg" for="pomodoro">Pomodoro</label>
             </div>
             <div class="me-2">
-                <input type="radio" class="btn-check" name="timer-options" value="30" id="option6" autocomplete="off">
-                <label class="btn" for="option6">30min</label>
+                <input type="radio" class="btn-check" name="timer-options" value="5" id="short-break" autocomplete="off">
+                <label class="btn btn-lg" for="short-break">Short Break</label>
             </div>
             <div class="me-2">
-                <input type="radio" class="btn-check" name="timer-options" value="15" id="option7" autocomplete="off">
-                <label class="btn" for="option7">15min</label>
-            </div>
-            <div class="me-2">
-                <input type="radio" class="btn-check" name="timer-options" value="5" id="option8" autocomplete="off">
-                <label class="btn" for="option8">5min</label>
+                <input type="radio" class="btn-check" name="timer-options" value="15" id="long-break" autocomplete="off">
+                <label class="btn btn-lg" for="long-break">Long Break</label>
             </div>
             <div>
-                <button class="btn btn-primary me-2" id="startstop-button">Start</button>
+                <button class="btn btn-lg btn-primary me-2" id="startstop-button">Start</button>
             </div>
             <div>
-                <button class="btn btn-secondary d-none" id="reset-button">Reset</button>
+                <button class="btn btn-lg btn-secondary d-none" id="reset-button">Reset</button>
             </div>
         </div>
         <p id="timer" class="timer">
