--- a/PomodoroUI/PomodoroUI/Areas/Registered/Pages/Timer/Partials/_CompletedStudyTasks.cshtml
+++ b/PomodoroUI/PomodoroUI/Areas/Registered/Pages/Timer/Partials/_CompletedStudyTasks.cshtml
@@ -42,7 +42,7 @@ else
                                     <h6 class="card-title mb-1 me-2">@task.Name</h6>
                                     <span class="badge" style="background-color: @(task.TaskPriority.DisplayHexColor)">Priority: @task.TaskPriority.Level</span>
                                 </div>
-                                <small>Created @task.DateCreated.Humanize()</small>
+                                <small>Completed @task.DateCompleted.Humanize()</small>
                             </div>
                         </div>
                         <div class="d-flex align-items-center">
