--- a/PomodoroUI/PomodoroUI/Areas/Registered/Pages/Timer/Partials/_StudyTaskCreate.cshtml
+++ b/PomodoroUI/PomodoroUI/Areas/Registered/Pages/Timer/Partials/_StudyTaskCreate.cshtml
@@ -29,10 +29,46 @@
             }
             <span asp-validation-for="StudyTaskCreate.TaskPriorityId" class="text-danger form-text"></span>
         </div>
+        <div class="mb-2">
+            <div class="d-flex align-items-center">
+                <label asp-for="StudyTaskCreate.Name" class="form-label me-2 my-0">Labels:</label>
+                <div class="dropdown">
+                    <button class="btn dropdown-toggle text-opacity-75" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Select Labels
+                    </button>
+                    <ul class="dropdown-menu" x-data="{ 
+                            selectedLabels: [] ,
+                            toggleLabel(id) {
+                                if (this.selectedLabels.includes(id)) {
+                                    this.selectedLabels = this.selectedLabels.filter(labelId => labelId !== id);
+                                } else {
+                                    this.selectedLabels.push(id);
+                                }
+                            }
+                        }">
+                        @foreach (var label in Model.TaskLabels)
+                        {
+                            <li>
+                                <a class="dropdown-item" href="#"
+                                   x-on:click.prevent.stop="toggleLabel(@label.Id)">
+                                    <div class="d-flex justify-content-between align-items-center">
+                                        <span class="badge" style="background-color: @(label.HexColor)">@label.Name</span>
+                                        <i class="bi"
+                                           :class="selectedLabels.includes(@label.Id) ? 'bi-check' :''" >
+                                        </i>
+                                    </div>
+                                </a>
+                            </li>
+                        }
+                    </ul>
+                </div>
+            </div>
+
+        </div>
     </div>
     <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="submit" id="submitButton" class="btn btn-primary">Add</button>
+        <button x-on:click.prevent.stop="submitCreateStudyTaskForm()" type="submit" id="submitButton" class="btn btn-primary">Add</button>
     </div>
     @Html.AntiForgeryToken()
 </form>
