--- a/PomodoroUI/PomodoroUI/Pages/Manage/Courses/Index.cshtml
+++ b/PomodoroUI/PomodoroUI/Pages/Manage/Courses/Index.cshtml
@@ -1,6 +1,5 @@
 ﻿@page "{id:int}"
-@using PomodoroLibrary.Models.Tables.StudyTaskEntities
-@model PomodoroUI.Pages.Manage.CourseModel
+@model PomodoroUI.Pages.Manage.Courses.IndexModel
 @{
     ViewData["Title"] = Model.Course.Name;
 }
@@ -142,7 +141,6 @@
                 <div>
                     <div>
                         <form method="post"
-                              asp-page-handler="UpdateStudyTask"
                               x-data="{
                               selectedLabels: @Json.Serialize(task.TaskLabels.Select(u => u.Id)),
                               toggleLabel(id) {
@@ -244,11 +242,11 @@
                             </div>
                             <div class="modal-footer d-flex justify-content-between">
                                 <div>
-                                    <button class="btn btn-danger" asp-page-handler="ArchiveStudyTask" asp-route-id="@task.Id" data-bs-dismiss="modal">Archive</button>
+                                    <button class="btn btn-danger" formmethod="post" asp-page-handler="ArchiveStudyTask" asp-route-courseId="@Model.Course.Id" asp-route-studyTaskId="@task.Id" data-bs-dismiss="modal">Archive</button>
                                 </div>
                                 <div>
                                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                                    <button type="submit" class="btn btn-primary">Save</button>
+                                    <button asp-page-handler="UpdateStudyTask" type="submit" class="btn btn-primary">Save</button>
                                 </div>
                             </div>
                         </form>
@@ -272,106 +270,9 @@
 </div>
 
 
-<div class="row">
-    <div class="col">
-        <ul class="list-group">
-            <li class="list-group-item">
-                <div class="d-flex align-items-center mb-1">
-                    <span class="todo-circle me-2"></span>
-                    <h5 class="mb-0">Todo</h5>
-                </div>
-                <small class="text-muted">Task has not been worked on yet</small>
-            </li>
-            @foreach (var task in Model.Course.StudyTasks.Where(u => !u.Completed))
-            {
-                <li class="list-group-item">
-                    <div class="d-flex justify-content-between align-items-center mb-0">
-                        <div class="d-flex align-items-baseline">
-                            <div>
-                                <input hx-post
-                                       hx-page-handler="CompleteTask"
-                                       hx-route-id="@task.Id"
-                                       hx-swap="outerHTML"
-                                       hx-target="#all-study-tasks"
-                                       type="checkbox"
-                                       class="form-check-input me-2 mt-1" />
-                            </div>
-                            <div class="d-flex flex-column justify-content-between">
-                                <div class="d-flex align-items-center">
-                                    <h6 class="card-title mb-1 me-2">@task.Name</h6>
-                                    @if (task.TaskPriority != null)
-                                    {
-                                        <span class="badge me-1" style="background-color: @(task.TaskPriority.DisplayHexColor)">Priority: <span class="fw-normal">@task.TaskPriority.Level</span></span>
-                                    }
-                                    @foreach (var label in task.TaskLabels)
-                                    {
-                                        <span class="badge me-1" style="background-color: @(label.HexColor)">@label.Name</span>
-                                    }
-                                </div>
-                                <small>@task.Status()</small>
-                            </div>
-                        </div>
-                        <div class="d-flex align-items-center">
-                            <a class="btn btn-link text-primary p-0" data-bs-toggle="modal" data-bs-target="#study-task-edit-modal-@(task.Id)">
-                                <i class="bi bi-three-dots"></i>
-                            </a>
-                        </div>
-                    </div>
+@await Html.PartialAsync("Partials/_Tasks")
 
-                </li>
-            }
-        </ul>
-    </div>
-    <div class="col">
-        <ul class="list-group">
-            <li class="list-group-item">
-                <div class="d-flex align-items-center mb-1">
-                    <span class="done-circle me-2"></span>
-                    <h5 class="mb-0">Done</h5>
-                </div>
-                <small class="text-muted">Task that have been completed</small>
-            </li>
-            @foreach (var task in Model.Course.StudyTasks.Where(u => u.Completed))
-            {
-                <li class="list-group-item">
-                    <div class="d-flex justify-content-between align-items-center mb-0">
-                        <div class="d-flex align-items-baseline">
-                            <div>
-                                <input hx-post
-                                       hx-page-handler="CompleteTask"
-                                       hx-route-id="@task.Id"
-                                       hx-swap="outerHTML"
-                                       hx-target="#all-study-tasks"
-                                       type="checkbox"
-                                       class="form-check-input me-2 mt-1" />
-                            </div>
-                            <div class="d-flex flex-column justify-content-between">
-                                <div class="d-flex align-items-center">
-                                    <h6 class="card-title mb-1 me-2">@task.Name</h6>
-                                    @if (task.TaskPriority != null)
-                                    {
-                                        <span class="badge me-1" style="background-color: @(task.TaskPriority.DisplayHexColor)">Priority: <span class="fw-normal">@task.TaskPriority.Level</span></span>
-                                    }
-                                    @foreach (var label in task.TaskLabels)
-                                    {
-                                        <span class="badge me-1" style="background-color: @(label.HexColor)">@label.Name</span>
-                                    }
-                                </div>
-                                <small>@task.Status()</small>
-                            </div>
-                        </div>
-                        <div class="d-flex align-items-center">
-                            <a class="btn btn-link text-primary p-0" data-bs-toggle="modal" data-bs-target="#study-task-edit-modal-@(task.Id)">
-                                <i class="bi bi-three-dots"></i>
-                            </a>
-                        </div>
-                    </div>
 
-                </li>
-            }
-        </ul>
-    </div>
-</div>
 
 @section Scripts {
 
