--- a/PomodoroUI/PomodoroUI/Pages/Manage/Index.cshtml
+++ b/PomodoroUI/PomodoroUI/Pages/Manage/Index.cshtml
@@ -51,44 +51,119 @@
     </div>
 </div>
 
-<div class="d-flex justify-content-between align-items-end mb-3">
-    <h5 class="mb-0">Courses</h5>
-    <button data-bs-toggle="modal" data-bs-target="#course-create-modal" class="btn btn-primary"><i class="bi bi-plus-lg"></i> Add Course</button>
+<div class="mb-2">
+    <div class="d-flex justify-content-between align-items-end mb-3">
+        <h5 class="mb-0">Courses</h5>
+        <button data-bs-toggle="modal" data-bs-target="#course-create-modal" class="btn btn-primary"><i class="bi bi-plus-lg"></i> Add Course</button>
+    </div>
+
+    @if (Model.Courses.Count == 0)
+    {
+        <p>No courses added.</p>
+    }
+    else
+    {
+        <div class="row">
+            @foreach (var course in Model.Courses)
+            {
+                <div class="col-md-4 mb-4">
+                    <a asp-page="/Manage/Courses/Index" asp-route-id="@course.Id" class="text-decoration-none">
+                        <div class="card h-100 card-hover" style="border-left: 5px solid @course.HexColor;">
+                            <div class="card-body d-flex flex-column justify-content-between">
+                                <div>
+                                    <h5 class="card-title fw-bold">@course.Name</h5>
+                                    <p class="card-text">@course.Description</p>
+                                </div>
+
+                                <div class="mt-3 d-flex align-items-center justify-content-between">
+                                    @if (course.Archived)
+                                    {
+                                        <span class="badge bg-secondary">Archived</span>
+                                    }
+                                    else
+                                    {
+                                        <span class="badge bg-success">Active</span>
+                                    }
+
+                                    <small class="text-muted">Incomplete Tasks: @(course.StudyTasks.Count(t => !t.Completed))</small>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            }
+        </div>
+    }
 </div>
 
-@if (Model.Courses.Count == 0)
-{
-    <p>No courses added.</p>
-}
-else
-{
-    <div class="row">
-        @foreach (var course in Model.Courses)
-        {
-            <div class="col-md-4 mb-4">
-                <a asp-page="/Manage/Course" asp-route-id="@course.Id" class="text-decoration-none">
-                    <div class="card h-100 card-hover" style="border-left: 5px solid @course.HexColor;">
-                        <div class="card-body">
-                            <h5 class="card-title fw-bold">@course.Name</h5>
-                            <p class="card-text">@course.Description</p>
-                            <div class="mt-3 d-flex align-items-center">
-                                @if (course.Archived)
+
+<div class="mb-2">
+    <div class="d-flex justify-content-between align-items-end mb-3">
+        <h5 class="mb-0">Tasks Due Next</h5>
+        <a class="btn btn-primary" asp-page="/Timer/Index"><i class="bi bi-clock me-2"></i>Start Study Session</a>
+    </div>
+
+    @if (Model.StudyTasks.Count == 0)
+    {
+        <p>No tasks available.</p>
+    }
+    else
+    {
+        <ul class="list-group">
+            <li class="list-group-item bg-body-tertiary">
+                <div class="row align-items-center">
+                    <div class="d-flex align-items-center justify-content-between">
+                        <div class="col-md-5">
+                            <span><strong>Task</strong></span>
+                        </div>
+                        <div class="d-none d-md-block col-md-4">
+                            <span><strong>Due</strong></span>
+                        </div>
+                        <div class="d-none d-lg-block col-md-1">
+                            <span><strong>Course</strong></span>
+                        </div>
+                        <div class="col-md-2 text-end text-nowrap">
+                            <span><strong>Actions</strong></span>
+                        </div>
+                    </div>
+                </div>
+            </li>
+            @foreach (var task in Model.StudyTasks
+               .Where(t => !t.Completed)
+               .OrderBy(t => t.Deadline == null)
+               .ThenBy(t => t.Deadline)
+               .Take(5))
+            {
+                <li class="list-group-item">
+                    <div class="row align-items-center">
+                        <div class="d-flex align-items-center justify-content-between">
+                            <div class="col-md-5">
+                                <span>@task.Name</span>
+                                @foreach(var label in task.TaskLabels)
                                 {
-                                    <span class="badge bg-secondary">Archived</span>
+                                    <span class="badge ms-1" style="background-color: @(label.HexColor)">@label.Name</span>
                                 }
-                                else
+                            </div>
+                            <div class="d-none d-md-block col-md-4">
+                                <span class="text-muted">@task.Deadline.Humanize()</span>
+                            </div>
+                            <div class="d-none d-lg-block col-md-1">
+                                @if (task.Course != null)
                                 {
-                                    <span class="badge bg-success">Active</span>
+                                    <span class="badge" style="background-color: @(task.Course.HexColor)">@task.Course.Name</span>
                                 }
+                            </div>
+                            <div class="col-md-2 text-end text-nowrap">
+                                @* <button class="btn btn-sm btn-secondary" data-bs-toggle="modal" data-bs-target="#editLabelModal-@Model.TaskLabels[i].Id">Edit</button>
+                                <button class="btn btn-sm btn-danger" data-bs-toggle="modal" data-bs-target="#deleteLabelModal-@Model.TaskLabels[i].Id">Delete</button> *@
                             </div>
                         </div>
                     </div>
-                </a>
-            </div>
-        }
-    </div>
-}
-
+                </li>
+            }
+        </ul>
+    }
+</div>
 
 @section Scripts {
 
