--- a/PomodoroUI/PomodoroUI/Pages/Timer/Partials/_AllStudyTasks.cshtml
+++ b/PomodoroUI/PomodoroUI/Pages/Timer/Partials/_AllStudyTasks.cshtml
@@ -19,7 +19,7 @@
         <div class="d-flex justify-content-between align-items-end mb-3" style="height: 40px">
             <div class="d-flex h-100 align-items-end">
                 <div class="d-flex mb-0 me-4">
-                    <h5 class="me-3">Tasks</h5>
+                    <h5>Tasks</h5>
                     @* <a class="my-0" asp-page="/Manage/Index">Manage</a> *@
                 </div>
                 <small class="btn btn-link m-0 p-0" style="display: none">Complete Checked</small>
