--- a/PomodoroUI/PomodoroUI/Pages/_ViewImports.cshtml
+++ b/PomodoroUI/PomodoroUI/Pages/_ViewImports.cshtml
@@ -2,3 +2,4 @@
 @namespace PomodoroUI.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, Htmx.TagHelpers
+@addTagHelper *, PomodoroUI
