--- a/src/Pomodoro.UI/Pages/Manage/Tasks/All.cshtml
+++ b/src/Pomodoro.UI/Pages/Manage/Tasks/All.cshtml
@@ -126,10 +126,144 @@
     </div>
 </div>
 
+<div class="modal fade" id="sort-modal" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <form method="get" asp-page="./">
+                <div class="modal-header mb-1">
+                    <h5 class="modal-title" id="taskModalLabel">Filter</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <div class="mb-2" x-data="{
+                        selectedLabels: @(Json.Serialize(Model.Filter.TaskLabelIds)),
+                        toggleLabel(id) {
+                            if (this.selectedLabels.includes(id)) {
+                                this.selectedLabels=this.selectedLabels.filter(labelId => labelId !== id);
+                            } else {
+                                this.selectedLabels.push(id);
+                            }
+                        },
+                        clearSelectedLabels() {
+                            this.selectedLabels = [];
+                        }
+                    }">
+                        <div class="d-flex justify-content-between align-items-center">
+                            <div class="d-flex align-items-center">
+                                <label asp-for="Filter.TaskLabelIds" class="form-label me-2 my-0">Labels:</label>
+                                <div class="dropdown">
+                                    <a class="text-muted" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                        Choose <i class="bi bi-chevron-expand"></i>
+                                    </a>
+                                    <ul class="dropdown-menu">
+                                        @foreach (var label in Model.TaskLabels)
+                                        {
+                                            <li>
+                                                <a class="dropdown-item" href="#"
+                                                   x-on:click.prevent.stop="toggleLabel(@label.Id)">
+                                                    <div class="d-flex justify-content-between align-items-center">
+                                                        <badge text="@label.Name" color="@label.HexColor"></badge>
+                                                        <i class="bi"
+                                                           :class="selectedLabels.includes(@label.Id) ? 'bi-check' :''">
+                                                        </i>
+                                                    </div>
+                                                </a>
+                                            </li>
+                                        }
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="mt-2">
+                            <template x-for="labelId in selectedLabels" :key="labelId">
+                                <div>
+                                    @foreach (var label in Model.TaskLabels)
+                                    {
+                                        <template x-if="labelId === @label.Id">
+                                            <badge text="@label.Name" color="@label.HexColor"></badge>
+                                        </template>
+                                    }
+                                    @*For model binding.*@
+                                    <input type="hidden" name="Filter.TaskLabelIds" :value="labelId">
+                                </div>
+                            </template>
+                        </div>
+                    </div>
+                    <div class="mb-2" x-data="{
+                         selectedLabels: @(Json.Serialize(Model.Filter.CourseIds)),
+                         toggleLabel(id) {
+                         if (this.selectedLabels.includes(id)) {
+                         this.selectedLabels=this.selectedLabels.filter(labelId =>
+                        labelId !== id);
+                        } else {
+                        this.selectedLabels.push(id);
+                        }
+                        },
+                        clearSelectedLabels() {
+                        this.selectedLabels = [];
+                        }
+                        }">
+                        <div class="d-flex justify-content-between align-items-center">
+                            <div class="d-flex align-items-center">
+                                <label asp-for="Filter.CourseIds" class="form-label me-2 my-0">Courses:</label>
+                                <div class="dropdown">
+                                    <a class="text-muted" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                        Choose <i class="bi bi-chevron-expand"></i>
+                                    </a>
+                                    <ul class="dropdown-menu">
+                                        @foreach (var label in Model.Courses)
+                                        {
+                                            <li>
+                                                <a class="dropdown-item" href="#"
+                                                   x-on:click.prevent.stop="toggleLabel(@label.Id)">
+                                                    <div class="d-flex justify-content-between align-items-center">
+                                                        <badge text="@label.Name" color="@label.HexColor"></badge>
+                                                        <i class="bi"
+                                                           :class="selectedLabels.includes(@label.Id) ? 'bi-check' :''">
+                                                        </i>
+                                                    </div>
+                                                </a>
+                                            </li>
+                                        }
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="mt-2">
+                            <template x-for="labelId in selectedLabels" :key="labelId">
+                                <div>
+                                    @foreach (var label in Model.Courses)
+                                    {
+                                        <template x-if="labelId === @label.Id">
+                                            <badge text="@label.Name" color="@label.HexColor"></badge>
+                                        </template>
+                                    }
+                                    @*For model binding.*@
+                                    <input type="hidden" name="Filter.CourseIds" :value="labelId">
+                                </div>
+                            </template>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="submit" id="submitButton" class="btn btn-primary">Apply</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+
 
 <div class="mb-2">
     <div class="d-flex justify-content-between align-items-end mb-3">
         <h5 class="mb-0">All Tasks</h5>
+        <div>
+            <a href="#" data-bs-toggle="modal" data-bs-target="#sort-modal">Filter <i class="bi bi-filter"></i></a>
+        </div>
+        
     </div>
     <ul class="list-group">
         <li class="list-group-item bg-body-tertiary">
@@ -203,26 +337,34 @@
         }
         @if (Model.StudyTasks.Count == 0)
         {
-            <li class="list-group-item custom-hover">
-                <a data-bs-toggle="modal" data-bs-target="#study-task-create-modal" class="row align-items-center">
-                    <div class="d-flex align-items-center justify-content-between">
-                        <div class="col-md-5">
-                            <i class="bi bi-plus"></i>
-                            <span class="ext-decoration-none text-opacity-50">Add New Task</span>
+            if (Model.FilterActive)
+            {
+                <li class="list-group-item custom-hover">
+                    No matching tasks.
+                </li>
+            } else
+            {
+                <li class="list-group-item custom-hover">
+                    <a data-bs-toggle="modal" data-bs-target="#study-task-create-modal" class="row align-items-center">
+                        <div class="d-flex align-items-center justify-content-between">
+                            <div class="col-md-5">
+                                <i class="bi bi-plus"></i>
+                                <span class="ext-decoration-none text-opacity-50">Add New Task</span>
+                            </div>
+                            <div class="d-none d-md-block col-md-4">
+                                <span class="text-opacity-50">Due...</span>
+                            </div>
+                            <div class="d-none d-lg-block col-md-1">
+                                <span class="text-opacity-50">Course...</span>
+                            </div>
+                            <div class="col-md-2 text-end text-nowrap">
+                            </div>
                         </div>
-                        <div class="d-none d-md-block col-md-4">
-                            <span class="text-opacity-50">Due...</span>
-                        </div>
-                        <div class="d-none d-lg-block col-md-1">
-                            <span class="text-opacity-50">Course...</span>
-                        </div>
-                        <div class="col-md-2 text-end text-nowrap">
-                        </div>
-                    </div>
-                </a>
-            </li>
-        }
+                    </a>
+                </li>
+            }
 
+        }
     </ul>
     @foreach (var task in Model.StudyTasks)
     {
