--- a/src/StudyPomo.UI/Pages/Manage/Tasks/All.cshtml
+++ b/src/StudyPomo.UI/Pages/Manage/Tasks/All.cshtml
@@ -441,7 +441,24 @@
                                 <div class="dropdown">
                                     <i style="cursor: pointer" class="text-secondary bi bi-three-dots" data-bs-toggle="dropdown" aria-expanded="false"></i>
                                     <ul class="dropdown-menu">
+                                        @if (!task.Completed)
+                                        {
+                                            <li>
+                                                <form method="post">
+                                                    <button type="submit" class="dropdown-item" asp-page-handler="CompleteStudyTask" asp-route-id="@task.Id">Mark As Completed</button>
+                                                </form>
+                                            </li>
+                                        }
+                                        else
+                                        {
+                                            <li>
+                                                <form method="post">
+                                                    <button type="submit" class="dropdown-item" asp-page-handler="UncompleteStudyTask" asp-route-id="@task.Id">Mark As Incomplete</button>
+                                                </form>
+                                            </li>
+                                        }
                                         <li><a class="dropdown-item" href="#" data-bs-toggle="modal" data-bs-target="@($"#{StudyTaskModalHelper.GetEditModalId(task.Id)}")">Edit</a></li>
+                                        <hr class="my-2" />
                                         <li>
                                             <form method="post">
                                                 <button type="submit" class="dropdown-item" asp-page-handler="ArchiveStudyTask" asp-route-studyTaskId="@task.Id">Delete</button>
