--- a/src/StudyPomo.UI/Pages/Shared/_Layout.cshtml
+++ b/src/StudyPomo.UI/Pages/Shared/_Layout.cshtml
@@ -21,6 +21,7 @@
         body {
             visibility: hidden;
         }
+
     </style>
     <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'><path fill='%23FFFFFF' d='M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zM1 8a7 7 0 0 1 7-7 3.5 3.5 0 1 1 0 7 3.5 3.5 0 1 0 0 7 7 7 0 0 1-7-7zm7-4.3a3.2 3.2 0 1 1 0 6.4 3.2 3.2 0 0 1 0-6.4zM9 8a1 1 0 1 1-2 0 1 1 0 0 1 2 0z'/></svg>">
     <link rel="stylesheet" href="~/lib/bootstrap/scss/custom.css" asp-append-version="true" />
@@ -35,6 +36,7 @@
       hx-swap="none">
     <!-- Hidden input to store the client's timezone -->
     <input type="hidden" id="timezone-input" name="ianaTimeZone" value="test">
+    <div id="hover-area"></div>
     <div class="content-wrapper">
         <header>
             <nav class="navbar navbar-expand-sm navbar-toggleable-sm mb-3 py-3">
@@ -169,6 +171,19 @@
             console.log(`Timezone detected: ${timezone}`);
             // Set the value of the hidden input
             document.getElementById("timezone-input").value = timezone;
+
+            const hoverArea = document.getElementById('hover-area');
+            const navOffcanvas = document.getElementById('nav-offcanvas');
+            let offcanvasInstance = new bootstrap.Offcanvas(navOffcanvas);
+
+            hoverArea.addEventListener('mouseenter', () => {
+                offcanvasInstance.show();
+            });
+
+            navOffcanvas.addEventListener('mouseleave', () => {
+                offcanvasInstance.hide();
+            });
+
         });
     </script>
 
