--- a/src/StudyPomo.UI/Pages/Shared/_Layout.cshtml.css
+++ b/src/StudyPomo.UI/Pages/Shared/_Layout.cshtml.css
@@ -13,3 +13,17 @@ for details on configuring this project to bundle and minify static web assets. 
     padding: 0.1rem 0rem 0.5rem 0rem;
     text-align: center;
 }
+
+
+#hover-area {
+    position: fixed;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    width: 3vw;
+    z-index: 1040;
+}
+
+#nav-offcanvas {
+    z-index: 1050; /* Higher than the hover area */
+}
