--- a/src/StudyPomo.UI/Pages/Shared/_Layout.cshtml
+++ b/src/StudyPomo.UI/Pages/Shared/_Layout.cshtml
@@ -72,7 +72,7 @@
                     </div>
                 </div>
             </nav>
-            <div class="offcanvas offcanvas-start rounded-end-4" style="width: 350px;" tabindex="-1" id="nav-offcanvas" aria-labelledby="nav-offcanvas-label">
+            <div class="offcanvas offcanvas-start rounded-end-4" data-bs-backdrop="false" style="width: 350px;" tabindex="-1" id="nav-offcanvas" aria-labelledby="nav-offcanvas-label">
                 <div class="offcanvas-header">
                     <div>
                         <h5 class="offcanvas-title" id="nav-offcanvas-label">studypomo</h5>
